cluster/apps/services/httpbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: services
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/instance: httpbin
spec:
  selector:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/instance: httpbin
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
