cluster/apps/services/httpbin/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-httpbin
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`httpbin.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      # middlewares:
      # - name: rfc1918
      # - name: headers-sts
      # - name: basicauth
      services:
        - name: httpbin
          namespace: services
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
